.k8s/preps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phasesix
