.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: phasesix
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: phasesix
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: phasesix
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: phasesix
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phasesix-web
  namespace: phasesix
  labels:
    app: phasesix-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phasesix-web
  template:
    metadata:
      labels:
        app: phasesix-web
    spec:
      containers:
        - name: phasesix-web-container
          image: sbroeckling/phasesix:latest
          ports:
            - containerPort: 8080

#      imagePullSecrets:
#        - name: gitlab-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: phasesix-web-service
  namespace: phasesix
  labels:
    app: phasesix-web
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8080
  selector:
    app: phasesix-web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phasesix-ingress
  namespace: phasesix
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: phasesix.nimbostratus.de
    http:
      paths:
      - backend:
          service:
            name: phasesix-web-service
            port:
              number: 8000
        path: /
        pathType: Prefix
